--- a/index.html
+++ b/index.html
@@ -6,14 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Become a foodlover</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
+
 
 </head>
 
 <body>
-    <h1>Skip The Diat</h1>
-    <h1>Just Eat Delicious</h1>
-    <h1>With Food Network</h1>
+    <section>
+        <div class="half-width">
+            <h1><span class="orange">Skip</span>The Diat,</h1>
+            <h1>Just Eat Delicious</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you dont need a diat because we provide delicious and junk food for you!</p>
+            <a class="limk-button" target="_blank" href="">Order food</a>
 
+        </div>
+        <div class="half-width">
+
+
+        </div>
+    </section>
+    <section>
+        <div>
+
+        </div>
+        <div>
+            <h3>About me</h3>
+            <p> We provide very delicious and yummy food. We pay special attention to our customer satisfaction. WE are
+                not conscious about your health, we are only aware of our profit. that's why we follow a different types
+                of marketing policy. We attract you to our delicious food and increase our profit. One more thing, we
+                alweas with truth.</p>
+        </div>
+    </section>
 
 </body>
 
