add secound part

--- a/index.html
+++ b/index.html
@@ -16,26 +16,27 @@
 </head>
 
 <body>
-    <section>
+    <section class="1st-top-benner flexible-cont">
         <div class="half-width">
             <h1><span class="orange">Skip</span>The Diat,</h1>
             <h1>Just Eat Delicious</h1>
             <h1>With Food Network</h1>
-            <p>Imagine you dont need a diat because we provide delicious and junk food for you!</p>
-            <a class="limk-button" target="_blank" href="">Order food</a>
+            <p>Imagine you dont need a diat because we <br> delicious and junk food for you!</p>
+            <a class="link-button" target="_blank" href="">Order food</a>
 
         </div>
         <div class="half-width">
-
+            <img src="images/Group 8450.png" alt="">
 
         </div>
     </section>
-    <section>
-        <div>
-
+    <section class="2nd-top-benner flexible-cont">
+        <div class="half-width">
+            <img src="images/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                alt="">
         </div>
-        <div>
-            <h3>About me</h3>
+        <div id="about-us" class="half-width  ">
+            <h2>About Us</h2>
             <p> We provide very delicious and yummy food. We pay special attention to our customer satisfaction. WE are
                 not conscious about your health, we are only aware of our profit. that's why we follow a different types
                 of marketing policy. We attract you to our delicious food and increase our profit. One more thing, we
